# Bab

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  sonar-project.properties
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260529_0001_baseline.py  20260529_0002_guardrail_rule_config.py  20260529_0003_guardrail_assignment_enforcement.py  20260531_0004_request_correlation.py  20260531_0005_allocation_reservations.py  20260531_0006_provider_pricing_catalogs.py  20260531_0007_guardrail_output_phase.py  20260531_0008_signed_audit_and_key_limits.py  20260601_0009_policy_foundation.py  20260601_0010_policy_runtime.py  20260601_0011_remove_legacy_allocations.py  20260601_0012_limit_policy_rules.py  20260602_0013_limit_assignment_accounting.py  20260602_0014_project_memberships.py  20260602_0015_remove_virtual_key_allowed_models.py  20260602_0016_one_dimensional_limit_rules.py  20260605_0017_provider_credential_health.py  20260605_0018_provider_v1_review_followup.py  20260605_0019_virtual_key_lifecycle.py  20260606_0020_project_slugs.py  20260607_0021_refresh_sessions.py  20260607_0022_project_invites.py  20260609_0023_audit_ledger_state.py  20260609_0024_scoped_policy_ownership_and_app_url.py  20260612_0025_virtual_key_rotation.py  20260613_0026_security_hardening.py  20260615_0027_logical_model_routing_and_fallback.py  20260616_0028_provider_model_offerings.py  20260616_0029_model_catalog_tables.py  20260616_0030_shared_policy_revisions.py  20260616_0031_policy_assignment_temporal_columns.py  20260616_0032_access_policy_revision_content.py  20260616_0033_access_route_provider_offering.py  20260617_0034_access_policy_shared_identity.py  20260617_0035_gateway_runtime_decisions.py  20260618_0036_guardrail_event_trace_links.py  20260618_0037_limit_rule_matchers.py  20260618_0038_limit_reservation_dimensions.py  20260618_0039_usage_record_dimensions.py  20260618_0040_limit_counting_units.py  (+11 more)
backend/src/app/: __init__.py  cli.py  main.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/: test_activity_scope.py  test_analytics.py  test_audit_logs.py  test_auth.py  test_deps.py  test_domain_metadata.py  test_limit_policies.py  test_model_aliases.py  test_phase11_permissions.py  test_policies.py  test_problem_details.py  test_project_provider_access.py  test_projects.py  test_providers.py  test_proxy_chat_completions.py  test_request_logs.py  test_settings.py  test_setup.py  test_subscriptions.py  test_usage_scope.py  test_v1_contracts.py  test_virtual_keys.py
backend/tests/core/: __init__.py  test_config.py  (+12 more)
(+505 files in other folders)
